# lv_port_linux_frame_buffer

./: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
